// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hscroll component matches snapshot (default props) 1`] = `
<div
  className="hscroll--enableFade hscroll hscroll--bgColor--white"
  onScroll={[Function]}
  style={
    Object {
      "width": "400px",
    }
  }
>
  <div
    className="hscroll-overflowEl"
  >
    <div
      className="hscroll-content"
    >
      <div
        style={
          Object {
            "width": "800px",
          }
        }
      >
        long boi
      </div>
    </div>
  </div>
</div>
`;

exports[`Hscroll component matches snapshot (disable fade) 1`] = `
<div
  className="hscroll hscroll--bgColor--white"
  style={
    Object {
      "width": "400px",
    }
  }
>
  <div
    className="hscroll-overflowEl"
  >
    <div
      className="hscroll-content"
    >
      <div
        style={
          Object {
            "width": "800px",
          }
        }
      >
        long boi
      </div>
    </div>
  </div>
</div>
`;

exports[`Hscroll component matches snapshot (enable gutter) 1`] = `
<div
  className="hscroll--enableFade hscroll--enableGutter hscroll hscroll--bgColor--white"
  onScroll={[Function]}
  style={
    Object {
      "width": "400px",
    }
  }
>
  <div
    className="hscroll-overflowEl"
  >
    <div
      className="hscroll-content"
    >
      <div
        style={
          Object {
            "width": "800px",
          }
        }
      >
        long boi
      </div>
    </div>
  </div>
</div>
`;
